creating icon and todo item components

--- a/citrus-app/src/style/config.scss
+++ b/citrus-app/src/style/config.scss
@@ -7,7 +7,7 @@ $color-palette: (
     user-box-backgorund-active: #89ACD2,
     user-box-text-active: #F5DF4E,
     todo-item-background: #E7E7E7,
-    checkbox-border: #E7E7E7,
+    checkbox-border: #949398,
     todo-menu-item-active: #F5DF4E,
     todo-menu-item: #F0F0F0,
     text-color: #3B3B3B,
