--- a/citrus-app/src/ui-components/user-box/UserBox.scss
+++ b/citrus-app/src/ui-components/user-box/UserBox.scss
@@ -13,6 +13,7 @@
     border-radius: 10px;
     height: 100px;
     cursor: pointer;
+    font-weight: 700;
 
     &--active {
         background-color: map-get($color-palette, user-box-backgorund-active);
