creating todo items section, todo item component, changing api call to store data as id value map

--- a/citrus-app/src/style/config.scss
+++ b/citrus-app/src/style/config.scss
@@ -10,6 +10,7 @@ $color-palette: (
     checkbox-border: #949398,
     todo-menu-item-active: #F5DF4E,
     todo-menu-item: #F0F0F0,
+    todo-menu-item-border: #C7C8CA,
     text-color: #3B3B3B,
 );
 
