--- a/citrus-app/src/ui-components/todo-item/TodoItem.scss
+++ b/citrus-app/src/ui-components/todo-item/TodoItem.scss
@@ -5,15 +5,26 @@
     background-color: map-get($color-palette, todo-item-background);
     height: 80px;
     padding-left: 50px;
-    margin-right: 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
+    margin-bottom: 10px;
 
     &__check {
         width: 44px;
         height: 44px;
         border: 2px solid map-get($color-palette, checkbox-border);
+        border-radius: 6px;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-right: 30px;
+    }
+
+    &__text {
+        font-size: map-get($font-sizes, sm);
+        line-height: map-get($line-height-styles, smd);
     }
 
 }
