--- a/citrus-app/src/ui-components/todo-item/TodoItem.scss
+++ b/citrus-app/src/ui-components/todo-item/TodoItem.scss
@@ -25,6 +25,10 @@
     &__text {
         font-size: map-get($font-sizes, sm);
         line-height: map-get($line-height-styles, smd);
+
+        &--completed {
+            text-decoration: line-through;
+        }
     }
 
 }
