--- a/citrus-app/src/App.scss
+++ b/citrus-app/src/App.scss
@@ -1,10 +1,10 @@
 .app {
     max-width: 1600px;
     margin: 0 auto;
+    background-color: #E5E5E5;
 }
 
 .row {
     max-width: 1280px;
-    min-width: 1024px;
     margin: 0 auto;
 }
