--- a/citrus-app/src/ui-components/todo-item/TodoItem.scss
+++ b/citrus-app/src/ui-components/todo-item/TodoItem.scss
@@ -25,10 +25,15 @@
     &__text {
         font-size: map-get($font-sizes, sm);
         line-height: map-get($line-height-styles, smd);
+        width: 100%;
 
         &--completed {
             text-decoration: line-through;
         }
+    }
+
+    @media screen and(max-width: '480px'){
+        padding: 15px;
     }
 
 }
