--- a/citrus-app/src/views/TodoSection.scss
+++ b/citrus-app/src/views/TodoSection.scss
@@ -14,11 +14,21 @@
             font-weight: 500;
             line-height: map-get($line-height-styles, lg);
             text-transform: uppercase;
+            margin-bottom: 10px;
         }
 
         &__menu {
             margin-left: auto;
             display: flex;
+
+            @media screen and(max-width: '900px'){
+                margin-left: unset;
+
+            }
+        }
+
+        @media screen and(max-width: '900px'){
+            flex-direction: column;
         }
     }
 
@@ -27,4 +37,7 @@
         flex-direction: column;
     }
 
+    @media screen and(max-width: '480px'){
+       padding: 30px 5px;
+    }
 }
