--- a/citrus-app/src/views/UsersSection.scss
+++ b/citrus-app/src/views/UsersSection.scss
@@ -3,6 +3,7 @@
 .users-section {
     padding: 80px 0;
     background-color: map-get($color-palette, background-yellow);
+    margin-bottom: 10px;
 
     &__header {
         display: flex;
@@ -19,9 +20,27 @@
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(5, minmax(130px, 210px));
         grid-column-gap: 58px;
         grid-row-gap: 25px;
+        
+        @media screen and (max-width: '1310px'){
+            padding: 0 10px;
+        }
+
+        @media screen and (max-width: '1100px') {
+            grid-gap: 15px;
+        }
+
+        @media screen and (max-width: '800px'){
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 10px;
+            padding: 0 10px;
+        }
+    }
+
+    @media screen and(max-width: '480px'){
+        padding: 40px 0;
     }
 
 }
