--- a/citrus-app/src/views/UsersSection.scss
+++ b/citrus-app/src/views/UsersSection.scss
@@ -15,6 +15,10 @@
             font-weight: 500;
             line-height: map-get($line-height-styles, lg);
             text-transform: uppercase;
+
+            @media screen and(max-width: '480px'){
+                font-size: 24px;
+             }
         }
     }
 
@@ -24,23 +28,29 @@
         grid-column-gap: 58px;
         grid-row-gap: 25px;
         
-        @media screen and (max-width: '1310px'){
-            padding: 0 10px;
-        }
-
+     
         @media screen and (max-width: '1100px') {
             grid-gap: 15px;
         }
 
-        @media screen and (max-width: '800px'){
-            grid-template-columns: repeat(3, 1fr);
+        @media screen and (max-width: '850px'){
+            grid-template-columns: repeat(5, 1fr);
             grid-gap: 10px;
-            padding: 0 10px;
+        }
+
+        @media screen and (max-width: '680px'){
+            grid-template-columns: repeat(3, 1fr);
         }
     }
 
-    @media screen and(max-width: '480px'){
-        padding: 40px 0;
+    @media screen and (max-width: '1310px'){
+        padding: 80px 10px;
     }
+
+    @media screen and(max-width: '480px'){
+        padding: 40px 10px;
+    }
+
+
 
 }
