--- a/citrus-app/src/ui-components/todo-item/TodoItem.scss
+++ b/citrus-app/src/ui-components/todo-item/TodoItem.scss
@@ -31,6 +31,10 @@
         &--completed {
             text-decoration: line-through;
         }
+
+        @media screen and(max-width: '480px'){
+            font-size: 14px;
+        }
     }
 
     @media screen and(max-width: '480px'){
