--- a/citrus-app/src/views/TodoSection.scss
+++ b/citrus-app/src/views/TodoSection.scss
@@ -41,7 +41,11 @@
         flex-direction: column;
     }
 
+    @media screen and (max-width: '1310px'){
+        padding: 80px 10px;
+    }
+
     @media screen and(max-width: '480px'){
-       padding: 30px 5px;
+        padding: 30px 10px;
     }
 }
