--- a/citrus-app/src/ui-components/todo-item/TodoItem.scss
+++ b/citrus-app/src/ui-components/todo-item/TodoItem.scss
@@ -34,6 +34,7 @@
 
         @media screen and(max-width: '480px'){
             font-size: 14px;
+            line-height: 20px;
         }
     }
 
